[Fix] Reset Button Mobile Position

--- a/index.sass
+++ b/index.sass
@@ -126,16 +126,19 @@ button
     align-items: center
   &__Header-Mobile
     width: 100%
-    height: 144px
+    height: 88px
     border-bottom: 1px solid $detail
     padding: 16px
-    align-items: flex-start
+    align-items: center
     gap: 8px
     display: none
     &__Close
       width: 46px
       height: 46px
       border-radius: 4px
+      display: flex
+      justify-content: center
+      align-items: center
       cursor: pointer
       &:hover
         background: $background
@@ -252,6 +255,8 @@ button
     display: flex
     justify-content: flex-end
     align-items: center
+    #restart-button
+      display: none
   &__Submit
     width: fit-content
     height: 32px
@@ -507,6 +512,13 @@ button
           text-align: center
         &-Button
           display: none
+    &__Footer
+      gap: 12px
+      #restart-button
+        height: 32px
+        border-radius: 16px
+        padding: 0 24px
+        display: flex
   .Months__Container
     height: fit-content
     flex-direction: column
